fix navigation adn added viewport to avoid zooming

--- a/JWDataTrackerWeb/src/index.html
+++ b/JWDataTrackerWeb/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>JWDataTrackerWeb</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
